--- a/Tracking/templates/Tracking/listbusiness.html
+++ b/Tracking/templates/Tracking/listbusiness.html
@@ -36,7 +36,7 @@
             baselat
         </th>
         <th>
-            baselong
+            No. of users
         </th>
         
         <th>
@@ -64,13 +64,13 @@
                 {{business.phonenumber}}
             </td>
             <td>
-                {{business.numberofvehicles}}  
+                {{business.vehicle_set.count}}  
             </td>
             <td>
                 {{business.baselat}}
             </td>
             <td>
-                {{business.baselong}}
+                {{business.user_set.count}}
             </td>
             <td>
                
