fixed all issues

--- a/TrackingProject/templates/Tracking/chat.html
+++ b/TrackingProject/templates/Tracking/chat.html
@@ -35,7 +35,7 @@
         {
           name: 'datalogger',
           type: 'line',
-          data: [6,9,9,77,55,8]
+          data: []
         },
         {
             name: 'co2sensor',
